# eatsimple-blockchain

./: Cargo.toml  LICENSE  build.rs
config/: sequencer.toml
proto/: transaction.proto
src/: batch.rs  block.rs  config.rs  crypto.rs  grpc.rs  lib.rs  storage.rs  utils.rs
src/handlers/: enroll.rs  mod.rs
src/handlers/enroll/: models.rs  src.rs
src/handlers/get_block/: mod.rs  models.rs  src.rs
src/handlers/get_chain_tip/: models.rs  src.rs
src/handlers/get_list_blocks/: models.rs  src.rs
src/handlers/get_tx/: models.rs  src.rs
src/handlers/post_enroll/: models.rs  src.rs
src/mode/: contributor.rs  mod.rs  sequencer.rs  witness.rs  writer.rs  writer_witness.rs
