[workspace]
members = ["."]

[package]
name = "eatsimple-blockchain"
version = "1.0.0"
authors = ["Eatsimple Sweden AB"]
edition = "2024"
license = 'MIT'

[features]
default   = ["writer", "witness", "sequencer"]
writer    = []
witness   = ["openssl", "rocksdb", "sled"]
sequencer = ["openssl", "rocksdb", "sled", "grpc"]
grpc      = ["tonic/transport", "tonic/tls-ring", "tonic-build"]

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
axum-server = { version = "0.6.0", features = ["rustls","tls-rustls"] }
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.2"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
futures = "0.3.31"
jsonwebtoken = "9.3.1"
openssl = { version = "0.10.72", optional = true }
prost = "0.13.5"
rcgen = "0.13.2"
rocksdb = { version = "0.23.0", optional = true }
rustls = { version = "0.21.12", default-features = false } 
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = { version = "0.34.7", optional = true }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"
tonic = { version = "0.13", features = ["transport", "tls-ring"], optional = true }
tower = "0.5.2"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
