[workspace]
members = ["."]

[package]
name = "eatsimple-blockchain"
version = "1.0.0"
authors = ["Eatsimple Sweden AB"]
edition = "2024"
license = 'MIT'

[[bin]]
name               = "sequencer"
path               = "src/bin/sequencer.rs"
required-features  = ["sequencer"]

[[bin]]
name               = "contributor"
path               = "src/bin/contributor.rs"
required-features  = ["contributor"] 

[features]
default         = ["sequencer"]
writer          = []
witness         = ["openssl"]
sequencer       = ["ed25519-dalek", "witness", "grpc", "sled", "sqlx"]
contributor     = ["ed25519-dalek", "grpc", "sled", "openssl"]
grpc            = ["tonic/transport", "tonic/tls-ring", "tonic-build"]

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.98"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
arkworks-utils = { version = "1.0.1", default-features = false, features = ["poseidon_bn254_x5_3"] }
ark-crypto-primitives = { version = "0.5.0" }
axum = "0.8.3"
axum-server = { version = "0.7.0", features = ["rustls","tls-rustls"] }
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
blake3 = "1.8.2"
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
ed25519-dalek = { version = "2.1.1", optional = true, features = ["rand_core", "pkcs8"] }
futures = "0.3.31"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
openssl = { version = "0.10.72", optional = true }
prost = { version = "0.13.5", features = ["prost-derive"] }
rand = "0.8"
rcgen = "0.13.2"
reqwest = { version = "0.12.15", features = ["json"] }
rustls = { version = "0.23.26", default-features = false, features = ["aws-lc-rs", "ring"] } 
rustls-pemfile = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sled = { version = "0.34.7", optional = true }
sqlx = { version = "0.8.5", features = ["postgres", "uuid", "runtime-tokio-native-tls"], optional = true}
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"
tonic = { version = "0.13", features = ["transport", "tls-ring"], optional = true }
tower = "0.5.2"
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde_jcs = "0.1.0"
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"]}
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
byteorder = "1.5.0"

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
